--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -64,12 +63,18 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="iMZ-Vb-y2H">
+                                <rect key="frame" x="169" y="315" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="BOZ-IN-gH4"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="iMZ-Vb-y2H" id="f0a-Cx-iiS"/>
                         <outlet property="tableView" destination="h7v-Pb-xOV" id="SmC-74-55F"/>
                     </connections>
                 </viewController>
@@ -85,77 +90,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rzF-yO-85O">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rzF-yO-85O">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h6f-6R-YFC">
-                                        <rect key="frame" x="0.0" y="174" width="145" height="221"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="221" id="CMs-q0-fC4"/>
-                                            <constraint firstAttribute="width" constant="145" id="Dk5-jW-of7"/>
-                                        </constraints>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j42-7J-Nw2">
-                                        <rect key="frame" x="153" y="227" width="207" height="109"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="109" id="Lbr-HB-8Si"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Movie Synopsis" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hid-Hu-zNa">
-                                        <rect key="frame" x="8" y="403" width="359" height="192"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="192" id="JZS-cJ-IKR"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sD2-gF-MbL">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sD2-gF-MbL">
                                         <rect key="frame" x="0.0" y="-64" width="375" height="283"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="283" id="hMu-2z-jtd"/>
-                                        </constraints>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="brp-12-Qu6">
+                                        <rect key="frame" x="12" y="171" width="151" height="227"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h6f-6R-YFC">
+                                        <rect key="frame" x="15" y="174" width="145" height="221"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Movie Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j42-7J-Nw2">
+                                        <rect key="frame" x="177" y="227" width="187" height="109"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Movie Synopsis" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hid-Hu-zNa">
+                                        <rect key="frame" x="8" y="403" width="359" height="192"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="hid-Hu-zNa" firstAttribute="top" secondItem="h6f-6R-YFC" secondAttribute="bottom" constant="8" symbolic="YES" id="7Wp-nn-y0o"/>
-                                    <constraint firstAttribute="trailing" secondItem="sD2-gF-MbL" secondAttribute="trailing" id="80W-MP-90F"/>
-                                    <constraint firstItem="j42-7J-Nw2" firstAttribute="top" secondItem="sD2-gF-MbL" secondAttribute="bottom" constant="8" symbolic="YES" id="BXE-0Q-aju"/>
-                                    <constraint firstItem="hid-Hu-zNa" firstAttribute="leading" secondItem="rzF-yO-85O" secondAttribute="leadingMargin" id="EyD-Gt-Uxl"/>
-                                    <constraint firstItem="sD2-gF-MbL" firstAttribute="leading" secondItem="h6f-6R-YFC" secondAttribute="leading" id="JcC-I9-cs6"/>
-                                    <constraint firstItem="sD2-gF-MbL" firstAttribute="centerX" secondItem="hid-Hu-zNa" secondAttribute="centerX" id="Ocn-Li-XNC"/>
-                                    <constraint firstItem="sD2-gF-MbL" firstAttribute="top" secondItem="rzF-yO-85O" secondAttribute="top" id="Q8f-i4-ilf"/>
-                                    <constraint firstAttribute="trailing" secondItem="j42-7J-Nw2" secondAttribute="trailing" constant="15" id="Xf2-e4-1GE"/>
-                                    <constraint firstItem="hid-Hu-zNa" firstAttribute="top" secondItem="j42-7J-Nw2" secondAttribute="bottom" constant="67" id="gps-7k-LB6"/>
-                                    <constraint firstItem="hid-Hu-zNa" firstAttribute="bottom" secondItem="rzF-yO-85O" secondAttribute="bottomMargin" id="maB-mo-SHL"/>
-                                    <constraint firstItem="sD2-gF-MbL" firstAttribute="leading" secondItem="rzF-yO-85O" secondAttribute="leading" id="vK9-73-X2l"/>
-                                    <constraint firstItem="j42-7J-Nw2" firstAttribute="leading" secondItem="h6f-6R-YFC" secondAttribute="trailing" constant="8" symbolic="YES" id="wcO-Gd-qUY"/>
-                                    <constraint firstItem="sD2-gF-MbL" firstAttribute="centerX" secondItem="rzF-yO-85O" secondAttribute="centerX" id="zvX-h4-a8Q"/>
-                                </constraints>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="rzF-yO-85O" firstAttribute="bottom" secondItem="HZi-cY-6b1" secondAttribute="bottom" id="WyW-4i-2TP"/>
-                            <constraint firstItem="rzF-yO-85O" firstAttribute="leading" secondItem="WPr-f8-DIr" secondAttribute="leading" id="i6P-E4-Odi"/>
-                            <constraint firstAttribute="trailing" secondItem="rzF-yO-85O" secondAttribute="trailing" id="sqL-EW-Qmt"/>
-                            <constraint firstItem="rzF-yO-85O" firstAttribute="top" secondItem="WPr-f8-DIr" secondAttribute="top" id="uhE-Qg-Xj4"/>
-                        </constraints>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <viewLayoutGuide key="safeArea" id="HZi-cY-6b1"/>
                     </view>
                     <connections>
                         <outlet property="backdropView" destination="sD2-gF-MbL" id="ABm-B4-ImU"/>
                         <outlet property="posterView" destination="h6f-6R-YFC" id="TaN-wx-BdH"/>
+                        <outlet property="scrollView" destination="rzF-yO-85O" id="BSr-lA-f6b"/>
                         <outlet property="synopsisLabel" destination="hid-Hu-zNa" id="SDP-Ah-ht6"/>
                         <outlet property="titleLabel" destination="j42-7J-Nw2" id="rW2-Ja-lT6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vqi-gR-Ue8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3425" y="-1370"/>
+            <point key="canvasLocation" x="3424.8000000000002" y="-1370.4647676161919"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1me-kD-3ey">
@@ -204,28 +187,29 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wyw-1c-MMQ">
-                                    <size key="itemSize" width="110" height="144"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="wyw-1c-MMQ">
+                                    <size key="itemSize" width="124" height="175"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCollectionCell" id="7vB-HH-jhf" customClass="MovieCollectionCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="110" height="144"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="124" height="175"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="110" height="144"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="124" height="175"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pvi-7z-11E">
-                                                    <rect key="frame" x="0.0" y="0.0" width="110" height="144"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="124" height="175"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </view>
                                         <connections>
                                             <outlet property="posterView" destination="pvi-7z-11E" id="2UL-Sv-1qQ"/>
+                                            <segue destination="REg-vo-uyk" kind="show" id="KEj-ym-5Nd"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -263,4 +247,7 @@
             <point key="canvasLocation" x="1150" y="-1370"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="KEj-ym-5Nd"/>
+    </inferredMetricsTieBreakers>
 </document>
